libs/bng/test/negative/N0200_rxn_undef_mol_pattern.bngl
# FAIL
# OUTPUT: error: Molecule type with name 'B' was not defined.

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a) + B(a) <-> A(a!1).A(a!1) kp, km
end reaction rules
